# yellow-rock-memory

./: .dockerignore  .env.example  .gitignore  AI-INSTALL.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  INSTALL.md  LEGAL_DISCLAIMER.md  LICENSE  README.md  SETUP.md  docker-compose.yml  grey-rock-config.example.json  yellow-rock-config.example.json
.github/workflows/: ci.yml
benches/: recall.rs
docs/: ADMIN_GUIDE.md  DEVELOPER_GUIDE.md  INSTALL.md  RETENTION.md  USER_GUIDE.md  index.html
hooks/: session-start.sh
src/: color.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  mcp.rs  models.rs  validate.rs
tests/: integration.rs
