[package]
name = "grey-rock-memory"
version = "3.0.0"
edition = "2021"
description = "Grey Rock memory system — structured message archival, escalation tracking, and logistics extraction for high-conflict communication management"
license = "MIT"
repository = "https://github.com/johngalt2035-dev/grey-rock-memory"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[[bench]]
name = "recall"
harness = false

[profile.release]
opt-level = 2
strip = true
lto = "thin"
